--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Blog preview card</title>
   <link rel="stylesheet" href="style.css">
@@ -14,13 +17,13 @@
       <img src="assets/images/illustration-article.svg" alt="">
       <div class="textarea">
         <div id="Button">Learning</div>
-        <p>Published 21 Dec 2023</p>
+        <p class="text">Published 21 Dec 2023</p>
         <h1>HTML & CSS foundations</h1>
         <p class="maintext">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="profile">
         <img src="assets/images/image-avatar.webp" alt="">
-        <p>Greg Hooper</p>
+        <span>Greg Hopper</span>
       </div>
   </main>
   <footer>  <div class="attribution">
